--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 body{
-    color: #888888;
+    font-family: 'Helvetica', 'Arial', sans-serif;
     font-size: 12px;
+    color: #888888;
 }
 
 
@@ -51,6 +52,7 @@ ul{
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 li{
     padding: 12px;
@@ -64,6 +66,14 @@ li{
     background-color: white;
     border: 1px solid #707070;
     border-radius: 4px;
+    box-shadow: 0px 1px 6px #00000029;
+}
+li:hover{
+    background-color: black;
+}
+a{
+    text-decoration: none;
+    color: #888888;
 }
 .align-section-center{
     display: flex;
@@ -117,9 +127,11 @@ form .radio .gender-input-container{
 form label{
     margin-bottom: 7px;
 }
+#btn-subscribe{
+    width: 340px;
+    height: 40px;
+}
 button{
-width: 340px;
-height: 40px;
 background: #707070;
 color: white;
 font-size: 16px;
@@ -127,7 +139,9 @@ border: 1px solid #707070;
 border-radius: 4px;
 opacity: 1;
 }
-
+button:hover{
+    background-color: black;
+}
 h3{
     font-size: 18px;
      display: flex;
@@ -156,6 +170,14 @@ h3{
     width: 200px;
     padding: 10px;
 }
+.product-img{
+    width: 100%;
+    height: 130px;
+    border: 1px solid #707070;
+}
+.product-description{
+    width: 100%;
+}
 .product-description h5{
     font-size: 14px;
     margin: 14px 0 10px 0;
@@ -164,11 +186,6 @@ section.products .product-description p:nth-child(2){
     margin: 10px 0 14px 0;
 }
 
-section.products img{
-    width: 200px;
-    height: 150px;
-    border: 1px solid #707070;
-}
 .price{
     font-size: 16px;
     font-weight: bold;
@@ -177,7 +194,7 @@ section.products img{
     
 }
 section.products button{
-    width: 200px;
+    width: 100%;
     height: 30px;
     margin-top: 10px;
 }
@@ -188,6 +205,7 @@ section.products button.next-page-button, #btn-newslatter{
 
 section.newsletter-container p:nth-child(2){
  margin-top: 44px;
+ padding-left: 20px;
  font-size: 16px;
 }
 form#newsletter{
@@ -213,7 +231,7 @@ display: flex;
 }
 
 footer{
-    height: 290px;
+    height: 200px;
     margin-top: 72px;
     position: relative;
     display: flex;
@@ -223,7 +241,7 @@ footer{
 }
 .footer-clip-path{
     width: 100%;
-    height: 290px;
+    height: 200px;
     background: #707070;
     position: absolute;
     top: 0;
@@ -234,4 +252,40 @@ footer{
     width: 260px;
     color: white;
     text-align: center;
+    }
+
+    @media (max-width: 1000px) {
+        form input, #btn-subscribe {
+            width: 90vw;
+            }
+        .hidden{
+            display: none;
+        }
+
+        .product-container {
+            width: 100%;
+            display: flex;
+            gap: 20px;
+            align-content: center;
+            align-items: flex-end;
+        }
+        .product-img {
+            width: 50%;
+            height: 130px;
+            border: 1px solid #707070;
+        }
+        .product-description {
+            width: 50%;
+        }
+        .product-description h5 {
+            margin-bottom: 20px;
+        }
+        
+        .products button {
+            width: 40vw;
+            height: 30px;
+            margin-top: 10px;
+        }
+        
+        
     }
