--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     color: #888888;
 }
 
-
 header{
 width: 100%;
 height: 400px;
@@ -126,6 +125,10 @@ form .radio .gender-input-container{
 
 form label{
     margin-bottom: 7px;
+}
+.error{
+    color: red;
+    margin-bottom: 10px;
 }
 #btn-subscribe{
     width: 340px;
