--- a/style.css
+++ b/style.css
@@ -130,6 +130,12 @@ form label{
     color: red;
     margin-bottom: 10px;
 }
+.success{
+    color: green;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 16px;
+}
 #btn-subscribe{
     width: 340px;
     height: 40px;
@@ -174,18 +180,20 @@ h3{
     padding: 10px;
 }
 .product-img{
-    width: 100%;
-    height: 130px;
+    width: 200px;
+    height: 134px;
     border: 1px solid #707070;
+    display: flex;
+    justify-content: center;
 }
-.product-description{
+.product-informations{
     width: 100%;
 }
-.product-description h5{
+.product-name{
     font-size: 14px;
     margin: 14px 0 10px 0;
 }
-section.products .product-description p:nth-child(2){
+.product-description{
     margin: 10px 0 14px 0;
 }
 
@@ -196,7 +204,7 @@ section.products .product-description p:nth-child(2){
     margin: 6px 0 6px 0;
     
 }
-section.products button{
+.btn-buy{
     width: 100%;
     height: 30px;
     margin-top: 10px;
@@ -205,7 +213,9 @@ section.products button.next-page-button, #btn-newslatter{
     width: 260px;
     height: 40px;
 }
-
+.next-page-button{
+    margin-top: 44px;
+}
 section.newsletter-container p:nth-child(2){
  margin-top: 44px;
  padding-left: 20px;
@@ -277,14 +287,14 @@ footer{
             height: 130px;
             border: 1px solid #707070;
         }
-        .product-description {
+        .product-informations {
             width: 50%;
         }
-        .product-description h5 {
+        .product-name {
             margin-bottom: 20px;
         }
         
-        .products button {
+        .btn-buy{
             width: 40vw;
             height: 30px;
             margin-top: 10px;
